# FreeCAD-Spring

./: .gitignore  CMakeLists.txt  Init.py  InitGui.py  Makefile  README.md  Spring.dox  SpringGlobal.h  SpringGui.py  Sprung.dox  SprungGui.py  codex_bootstrap.sh  package.xml  pixi.toml
App/: AppSpring.cpp  CMakeLists.txt  CompressionSpringFeature.cpp  CompressionSpringFeature.h  PreCompiled.h
Commands/: CreateExtensionSpring.py  DisplaySpringInfo.py  __init__.py
Dialogs/: SpringInfoDialog.py  __init__.py
Features/: Utils.py  ViewProviderSpring.py
Features/Compression/: EndType.json  Spring.py  Utils.py
Features/Extension/: Spring.py  Utils.py
Features/Torsion/: Spring.py  Utils.py
Gui/: AppSpringGui.cpp  CMakeLists.txt  Command.cpp  PreCompiled.h  ViewProviderCompressionSpringParametric.cpp  ViewProviderCompressionSpringParametric.h  Workbench.cpp  Workbench.h
Preferences/: SpringPreferencePage.py  __init__.py
Resources/: Spring.qrc  Sprung.qrc
Spring/: CMakeLists.txt  Init.py  InitGui.py  SpringCommands.py  SpringTools.py  Workbench.py  __init__.py  _bootstrap.py
Spring/App/: CMakeLists.txt  CompressionSpringFeature.cpp  CompressionSpringFeature.h  ExtensionSpringFeature.cpp  ExtensionSpringFeature.h  SpringFeature.cpp  SpringFeature.h  SpringModule.cpp  SpringModule.h  TestPnt2dModule.cpp  TorsionSpringFeature.cpp  TorsionSpringFeature.h
Spring/Commands/: CreateCompressionSpring.py  CreateTorsionSpring.py
Spring/Features/Extension/: Spring.py  Utils.py
Spring/Features/Torsion/: Spring.py
Spring/Gui/: CMakeLists.txt  SpringGui.cpp  SpringGui.h  SpringGuiPy.cpp
Spring/Gui/Resources/: Spring.qrc
Spring/tests/: gp_Pnt2d_dump.cpp
Tests/: test_Springs.py  test_install_spring_mod_path.py  test_package_import.py
libspringarea/: CMakeLists.txt  pyarea.cpp
libspringarea/kurve/: test.py
libspringocct/: CMakeLists.txt  Pnt2dNative.cpp  Pnt2dNative.hpp  compression_spring_solid.cpp  compression_spring_solid.hpp  pyocct.cpp  pyspringocct.cpp
scripts/: __init__.py  diagnose_freecad_env.py  install_spring_mod_path.py  setup_cpp_layout.sh  stage_artifacts.py
src/: CMakeLists.txt  SpringConfig.h.in
src/App/: CMakeLists.txt  CompressionSpring.cpp  CompressionSpringPy.cpp
src/cmake/: FindFreeCAD.cmake
